@@ -39,10 +39,13 @@ $output="" ;
 if (isset($_SESSION[$guid]["gibbonRoleIDCurrentCategory"])) {
 	if ($_SESSION[$guid]["gibbonRoleIDCurrentCategory"]=="Staff") {
 		$alarm=getSettingByScope($connection2, "System", "alarm") ;
-		if ($alarm=="General" OR $alarm=="Lockdown") {
+		if ($alarm=="General" OR $alarm=="Lockdown" OR $alarm=="Custom") {
 			$type="general" ;
 			if ($alarm=="Lockdown") {
 				$type="lockdown" ;
+			}
+			else if ($alarm=="Custom") {
+				$type=="custom" ;
 			}
 			$output.="<script>
 				if ($('div#TB_window').is(':visible')==true && $('div#TB_window').attr('class')!='alarm') {
